--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
     <h3>Skills</h3>
     <table>
       <tr>
-        <th>OS</th>
-        <td>Windows, Ubuntu など</td>
+        <th>得意分野</th>
+        <td>オンラインゲーム</td>
       </tr>
       <tr>
-        <th>Engine, Frameworks</th>
-        <td>Node.js, Express など</td>
+        <th>好きなオンラインゲーム</th>
+        <td>シューティングゲーム</td>
       </tr>
       <tr>
-        <th>Tool, MiddleWare</th>
-        <td>Git, PostgreSQL など</td>
+        <th>趣味</th>
+        <td>音楽鑑賞、動画鑑賞</td>
       </tr>
       <tr>
         <th>資格・免許</th>
-        <td>情報処理技術者、LPIC など</td>
+        <td>なし</td>
       </tr>
     </table>
 
     <h3>Works</h3>
-    <p>アピールできる活動内容を書きましょう。</p>
+    <p>作成中</p>
     <ul>
       <li><a href="https://github.com/">GitHub</a></li>
       <li><a href="https://qiita.com/">Qiita</a></li>
@@ -58,7 +58,7 @@
     </ul>
 
     <h3>Contact</h3>
-    <p>連絡先や SNS のアカウントを書きましょう。</p>
+    <p>なし</p>
     <ul>
       <li><a href="mailto:name@example.com">Mail</a></li>
       <li><a href="https://twitter.com/n_yobikou">X(旧 Twitter)</a></li>
@@ -66,19 +66,19 @@
     </ul>
 
     <h3>History</h3>
-    <p>学歴、職歴、アルバイト、インターン経験など。</p>
+    <p>大学在学中</p>
     <table>
       <tr>
-        <th>2019 年</th>
-        <td><a href="https://dwango.co.jp/">株式会社ドワンゴ</a> 入社</td>
+        <th>2021 年</th>
+        <td>高校入学</td>
       </tr>
       <tr>
-        <th>2018 年</th>
-        <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">N高等学校</a> 卒業</td>
+        <th>2025 年</th>
+        <td>大学入学</td>
       </tr>
       <tr>
-        <th>20XX 年</th>
-        <td>表彰、受賞歴、メディア掲載記事などあれば</td>
+        <th>2025 年</th>
+        <td>このページを作成</td>
       </tr>
     </table>
   </body>
