--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
       <li>
         作った作品
         <ul>
-          <li><a href="https://example.com/">作品 1</a></li>
-          <li><a href="https://example.com/">作品 2</a></li>
+          <li>作成中</li>
         </ul>
       </li>
     </ul>
@@ -60,14 +59,14 @@
     <h3>Contact</h3>
     <p>なし</p>
     <ul>
-      <li><a href="mailto:name@example.com">Mail</a></li>
+      <li>なし</li>
     </ul>
 
     <h3>History</h3>
     <p>大学在学中</p>
     <table>
       <tr>
-        <th>2021 年</th>
+        <th>2022 年</th>
         <td>高校入学</td>
       </tr>
       <tr>
