--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <td>オンラインゲーム</td>
       </tr>
       <tr>
-        <th>好きなオンラインゲーム</th>
+        <th>好きなゲーム</th>
         <td>シューティングゲーム</td>
       </tr>
       <tr>
@@ -45,9 +45,6 @@
     <h3>Works</h3>
     <p>作成中</p>
     <ul>
-      <li><a href="https://github.com/">GitHub</a></li>
-      <li><a href="https://qiita.com/">Qiita</a></li>
-      <li><a href="https://zenn.dev/">Zenn</a></li>
       <li>
         作った作品
         <ul>
