--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>poppycat-orange</h1>
-    <img src="markup_1000002640.jpg">
+    <img src="markup_1000002640.jpg" width="280">
     
     <h2>About</h2>
     <p>
