--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
       <li>
         作った作品
         <ul>
-          <li><a href="https://openprocessing.org/sketch/2803714
-License CreativeCommons Attribution NonCommercial ShareAlike
-https://creativecommons.org/licenses/by-nc-sa/3.0">作品 1</li>
+          <li><a href="https://openprocessing.org/sketch/2803714">作品 1</li>
         </ul>
       </li>
     </ul>
