--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <td>このページを作成</td>
       </tr>
     </table>
+    <h3>好きな動画</h3>
+    <iframe width="560" height="315" src="https://youtube.com/watch?v=z6OfHAeXGPg&si=iEGag0BltQC1Dt4m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h3>Open Processing</h3>
     <iframe src="https://openprocessing.org/sketch/2803714/embed/" width="640" height="360"></iframe>
   </body>
