--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <h2>About</h2>
     <p>
-      大学1年生<br>
+      大学生<br>
       オンラインで勉強中
     </p>
 
@@ -49,7 +49,7 @@
       <li>
         作った作品
         <ul>
-          <li><a href="https://openprocessing.org/sketch/2803714">作品 1</li>
+          <li>作成中</li>
         </ul>
       </li>
     </ul>
