--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <h3>Profile</h3>
     <ul>
-      <li>名前　poppycat-orange</li>
-      <li>所在地　東京</li>
+      <li>Name　poppycat-orange</li>
+      <li>Place　東京</li>
     </ul>
 
     <h3>Skills</h3>
@@ -45,12 +45,7 @@
     <h3>Works</h3>
     <p>作成中</p>
     <ul>
-      <li>
-        作った作品
-        <ul>
-          <li>作成中</li>
-        </ul>
-      </li>
+      <li>作成中</li>
     </ul>
 
     <h3>Contact</h3>
