--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </tr>
     </table>
     <h3>好きな動画</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/z6OfHAeXGPg&si=iEGag0BltQC1Dt4m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/z6OfHAeXGPg&si=iEGag0BltQC1Dt4mYOUR_VIDEO_ID" frameborder="0" allow="accelerometer; autoplay;-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>Open Processing</h3>
     <iframe src="https://openprocessing.org/sketch/2803714/embed/" width="640" height="360"></iframe>
   </body>
